--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,16 @@
 	background-color: #f4f4f4;
 	color: #000;
 	overflow-x: hidden;
+	opacity: 0;
+	animation: fadeIn 0.8s ease-in forwards:
   }
+
+@keyframes fadeIn{
+	to{ 
+		opacity: 1;
+	}
+}
+
   
   .navbar {
 	overflow: hidden;
