--- a/styles.css
+++ b/styles.css
@@ -144,9 +144,19 @@
 	background-color: rgb(254, 255, 254);
   }
   
-  .portfolio-highlights {
-	background-color: rgb(233, 235, 248);
+.portfolio-highlights {
+  background-color: rgb(233, 235, 248);
+  opacity: 0;
+  animation: fadeIn 0.8s ease-in forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
   }
+}
+
+
   
   .client-testimonials {
 	background-color: rgb(254, 255, 254);
