--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@
 	align-items: center;
 	padding: 20px;
     	opacity: 0;
-  	animation: fadeIn 0.8s ease-in forwards;
+  	animation: fadeIn 0.6s ease-out forwards;
 }
 
 @keyframes fadeIn {
