--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,15 @@
 	padding: 20px;
 	color: #000;
 	text-align: center;
+	opacity: 0;
+  	animation: fadeIn 0.6s ease-out forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
   }
+}
   
   .introduction {
 	background-color: rgb(254, 255, 254);
